--- a/src/components/MainPage.module.scss
+++ b/src/components/MainPage.module.scss
@@ -163,6 +163,23 @@
   transform: scale(1.2);
 }
 
+.challengeButton {
+  margin-top: 10px;
+  padding: 10px 20px;
+  font-size: 18px;
+  font-weight: bold;
+  background-color: #ff9800;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.challengeButton:hover {
+  background-color: #e68900;
+}
+
 
 
 
