Обновил все файлы в components

--- a/src/components/CharacterScreen.module.scss
+++ b/src/components/CharacterScreen.module.scss
@@ -103,7 +103,7 @@
   right: 4%;
   width: 131px;
   height: 160px;
-  background: url("../assets/skin-stat-bonuses-bg.png") no-repeat center,
+  background: url("../Assets/skin-stat-bonuses-bg.png") no-repeat center,
     rgba(0, 0, 0, 0.7);
   background-size: cover;
   color: white;
@@ -117,7 +117,7 @@
   position: absolute;
   top: 50%;
   width: 80%;
-  background: url("../assets/character-stats-bg.png") no-repeat center;
+  background: url("../Assets/character-stats-bg.png") no-repeat center;
   background-size: cover;
   padding: 20px;
   border-radius: 10px;
@@ -189,7 +189,7 @@
   display: flex;
   gap: 10px;
   z-index: 1000;
-  background: url("../assets/bp-tasks-bg.png") no-repeat center;
+  background: url("../Assets/bp-tasks-bg.png") no-repeat center;
   background-size: cover;
   padding: 10px;
   border-radius: 10px;
